--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Waka Readme
+name: WakaTime Readme Update
 
 on:
   schedule:
@@ -8,25 +8,18 @@ on:
 
 jobs:
   update-readme:
-    name: Update Readme with Metrics
+    name: Update Organization README
     runs-on: ubuntu-latest
     steps:
-      # Step 1: Check out the correct repository
+      # Step 1: Check out the organization's .github repository
       - uses: actions/checkout@v4
         with:
-          # This specifies the repository to check out.
           repository: 'dev3027/.github'
-          # This token is used to check out the repository.
           token: ${{ secrets.GH_TOKEN }}
 
-      # Step 2: Run the WakaTime stats action in the checked-out repository
-      - uses: anmol098/waka-readme-stats@master
+      # Step 2: Use the athul/waka-readme action
+      # This action correctly operates on the checked-out repository
+      - uses: athul/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          # The invalid REPOSITORY input has been removed.
-          # The action will now automatically push to the checked-out repo.
-          SHOW_PROFILE_VIEWS: "false"
-          SHOW_LOC_CHART: "false"
-          SHOW_SHORT_INFO: "false"
-          SYMBOL_VERSION: "3"
