--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: WakaTime Readme Update
 
 on:
   schedule:
-    # Runs at 12am IST
+    # Runs at 12am IST / 1:30 PM EDT
     - cron: '30 18 * * *'
   workflow_dispatch:
 
@@ -17,9 +17,10 @@ jobs:
           repository: 'dev3027/.github'
           token: ${{ secrets.GH_TOKEN }}
 
-      # Step 2: Use the athul/waka-readme action
-      # This action correctly operates on the checked-out repository
+      # Step 2: Run the WakaTime stats action
       - uses: athul/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          # This tells the action where to find the README file
+          TARGET_PATH: 'profile/README.md'
