--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,4 @@ jobs:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           # This tells the action where to find the README file
-          TARGET_PATH: 'profile/README.md'
+          TARGET_PATH: '/profile/README.md'
